# PicoPlayer

./: .gitmodules  :w  :wq  Cargo.toml
alt/: Cargo.toml  package-lock.json  rustc-ice-2023-11-28T03_01_20-20972.txt  rustc-ice-2023-11-28T03_03_04-21044.txt
src/: main.rs
